package eslem.weekendUML;

public interface Calculation {
    public double getArea();
    public double getCircumference();
}
